--- a/app/views/frontend/index.html.erb
+++ b/app/views/frontend/index.html.erb
@@ -47,7 +47,7 @@
           <h3>Lipton в Instagram</h3>
 
           <p>Следи за Lipton в Instagram, чтобы быстрее всех получить новость о новом задании</p>
-          <a href="instagram://user?username-lipton"></a>
+          <a href="http://instagram.com/liptonru"></a>
         </div>
       </div>
     </div>
