--- a/app/views/frontend/index.html.erb
+++ b/app/views/frontend/index.html.erb
@@ -26,7 +26,7 @@
           <div class="control-group text">
             <%= f.check_box :is_subscribed -%> <span class="checkbox"></span>я хочу узнавать о новых конкурсах Липтон
           </div>
-          <div class="control-group text">
+          <div class="control-group text acceptance">
             <%= f.check_box :accepted_deal -%> <span class="checkbox"></span>я согласен с <%= link_to 'правилами конкурса', action: :rules -%>
           </div>
           <div class="control-group">
