--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
   </div>
 </div>
 <div class="spacer"></div>
-<div class="overlay"></div>
+<div class="overlay"><%= (render partial: 'post', object: @popup) if @popup %></div>
 <div class="wrapper">
 
 <%= yield %>
