--- a/app/views/frontend/_post.html.erb
+++ b/app/views/frontend/_post.html.erb
@@ -19,7 +19,7 @@
           <p>Поделиться</p>
         </div>
         <div class="share">
-          <p>В твиттер</p>
+          <p><a target='_blank' data-href='<%= %(https://twitter.com/intent/tweet?text='Посмотрите на меня!'&url=http://insta.liptontea.ru#{post.id}&shareDescShort='Я участвую в конкурсе липтона!') %>'  class='tw'>В твиттер</a></p>
           <p>В фейсбук</p>
         </div>
       </div>
